@@ -783,15 +783,15 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 	/*
 	 * @Desc : used to fetch delivery mode description details TISEE-950
-	 * 
+	 *
 	 * @param ussId
-	 * 
+	 *
 	 * @param deliveryMode
-	 * 
+	 *
 	 * @param startTime
-	 * 
+	 *
 	 * @param endTime
-	 * 
+	 *
 	 * @return String
 	 */
 
@@ -964,12 +964,12 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 	 * @param allWishlists
 	 * @param pincode
 	 * @return : List<Wishlist2EntryModel>
-	 * @throws CMSItemNotFoundException
+	 * @throws EtailNonBusinessExceptions
 	 */
 	@Override
 	public List<Wishlist2EntryModel> getGiftYourselfDetailsMobile(final int minGiftQuantity,
-			final List<Wishlist2Model> allWishlists, final String pincode, final Collection<CartModel> cartModelList)
-			throws CMSItemNotFoundException
+			final List<Wishlist2Model> allWishlists, final String pincode, final CartModel cartModel)
+			throws EtailNonBusinessExceptions
 	{
 
 		final List<Wishlist2EntryModel> productDataList = new ArrayList<Wishlist2EntryModel>();
@@ -983,24 +983,20 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 				for (final Wishlist2EntryModel entryWishlist : wishlistEntry.getEntries())//getting the latest two
 				{
-					if (null != cartModelList && !cartModelList.isEmpty())
-					{
-						for (final CartModel cart : cartModelList)
-						{
-							if (null != cart.getEntries() && !cart.getEntries().isEmpty())
-							{
-								for (final AbstractOrderEntryModel entry : cart.getEntries())
-								{
 
-									if (null != entry.getSelectedUSSID() && !entry.getSelectedUSSID().isEmpty()
-											&& null != entryWishlist.getUssid() && !entryWishlist.getUssid().isEmpty()
-											&& entry.getSelectedUSSID().equalsIgnoreCase(entryWishlist.getUssid()))
-									{
-										productExistInCartList.add(entryWishlist);
-									}
-								}
+					if (null != cartModel.getEntries() && !cartModel.getEntries().isEmpty())
+					{
+						for (final AbstractOrderEntryModel entry : cartModel.getEntries())
+						{
+
+							if (null != entry.getSelectedUSSID() && !entry.getSelectedUSSID().isEmpty()
+									&& null != entryWishlist.getUssid() && !entryWishlist.getUssid().isEmpty()
+									&& entry.getSelectedUSSID().equalsIgnoreCase(entryWishlist.getUssid()))
+							{
+								productExistInCartList.add(entryWishlist);
 							}
 						}
+
 					}
 					productDataList.add(entryWishlist);
 				}
@@ -1022,13 +1018,10 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 			Collections.sort(productDataList, fieldComparator);
 			LOG.info("Sorted productDataList" + productDataList);
 
-			if (CollectionUtils.isNotEmpty(cartModelList) && (((List<CartModel>) cartModelList).get(0) != null))
-			{
-				//finalgiftList = preparingFinalList(productDataList, pincode, (((List<CartModel>) cartModelList).get(0))); // TISPT-179 Point 3
-				final Tuple2<?, ?> wishListPincodeObject = preparingFinalList(productDataList, pincode,
-						(((List<CartModel>) cartModelList).get(0)));
-				finalgiftList = (List<Wishlist2EntryModel>) wishListPincodeObject.getFirst();
-			}
+			//finalgiftList = preparingFinalList(productDataList, pincode, (((List<CartModel>) cartModelList).get(0))); // TISPT-179 Point 3
+			final Tuple2<?, ?> wishListPincodeObject = preparingFinalList(productDataList, pincode, cartModel);
+			finalgiftList = (List<Wishlist2EntryModel>) wishListPincodeObject.getFirst();
+
 		}
 		return finalgiftList;
 	}
@@ -1088,7 +1081,7 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 	 */
 
 	private Tuple2<List<?>, List<?>> preparingFinalList(final List<Wishlist2EntryModel> productDataList, final String pincode,
-			final CartModel cartModel) throws CMSItemNotFoundException
+			final CartModel cartModel) throws EtailNonBusinessExceptions
 	{
 		final List<Wishlist2EntryModel> giftList = new ArrayList<Wishlist2EntryModel>();
 		List<PinCodeResponseData> pinCodeResponseDataList = null;
@@ -1212,11 +1205,11 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 	/*
 	 * @Desc checking wishlist entry is valid or not , delisted , end date , online from TISEE-5185
-	 * 
+	 *
 	 * @param wishlistEntryModel
-	 * 
+	 *
 	 * @return boolean
-	 * 
+	 *
 	 * @throws EtailNonBusinessExceptions
 	 */
 	@Override
@@ -1263,11 +1256,11 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 	/*
 	 * @Desc creating pin code service data for pincode serviceability for wishlist
-	 * 
+	 *
 	 * @param sortedWishListMap
-	 * 
+	 *
 	 * @return List<PincodeServiceData>
-	 * 
+	 *
 	 * @throws EtailNonBusinessExceptions
 	 */
 	private List<PincodeServiceData> fetchWishlistPincodeRequestData(
@@ -1397,11 +1390,11 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 	/*
 	 * @Desc creating pin code service data for pincode serviceability for wishlist
-	 * 
+	 *
 	 * @param sortedWishListMap
-	 * 
+	 *
 	 * @return List<PincodeServiceData>
-	 * 
+	 *
 	 * @throws EtailNonBusinessExceptions
 	 */
 	private List<PincodeServiceData> fetchWishlistPincodeRequestDataMobile(final Wishlist2EntryModel wishlist2EntryModel)
@@ -2263,13 +2256,13 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 	/*
 	 * @Desc fetching reservation details
-	 * 
+	 *
 	 * @param cartId
-	 * 
+	 *
 	 * @param cartData
-	 * 
+	 *
 	 * @param pincode
-	 * 
+	 *
 	 * @throws EtailNonBusinessExceptions
 	 */
 	@Override
@@ -2363,11 +2356,11 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 	/*
 	 * @Desc converting response to dto
-	 * 
+	 *
 	 * @param inventoryReservListResponse
-	 * 
+	 *
 	 * @return List<ReservationItemWsDTO>
-	 * 
+	 *
 	 * @throws EtailNonBusinessExceptions
 	 */
 	private List<ReservationItemWsDTO> converter(final InventoryReservListResponse inventoryReservListResponse)
@@ -2404,11 +2397,11 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 	/*
 	 * @Desc populating data for soft reservation
-	 * 
+	 *
 	 * @param cartData
-	 * 
+	 *
 	 * @return List<CartSoftReservationData>
-	 * 
+	 *
 	 * @throws EtailNonBusinessExceptions
 	 */
 	public List<CartSoftReservationData> populateDataForSoftReservation(final CartData cartData) throws EtailNonBusinessExceptions
@@ -2481,21 +2474,20 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 	/*
 	 * @DESC MobileWS105 : get top two wish list for mobile web service
-	 * 
+	 *
 	 * @param userModel
-	 * 
+	 *
 	 * @param pincode
-	 * 
+	 *
 	 * @return GetWishListWsDTO
-	 * 
+	 *
 	 * @throws EtailNonBusinessExceptions
 	 */
 
 	@Override
-	public GetWishListWsDTO getTopTwoWishlistForUser(final UserModel userModel, final String pincode,
-			final Collection<CartModel> cartModelList) throws CMSItemNotFoundException
+	public GetWishListWsDTO getTopTwoWishlistForUser(final UserModel userModel, final String pincode, final CartModel cartModel)
+			throws EtailNonBusinessExceptions
 	{
-
 		GetWishListWsDTO getWishListWsDTO = new GetWishListWsDTO();
 		List<Wishlist2EntryModel> sortedWishList = new ArrayList<Wishlist2EntryModel>();
 		boolean wishlistNonExist = false;
@@ -2510,7 +2502,7 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 		final int minGiftQuantity = siteConfigService.getInt("mpl.cart.giftQuantity.lineItem", 0);
 
 
-		sortedWishList = getGiftYourselfDetailsMobile(minGiftQuantity, allWishlists, pincode, cartModelList);
+		sortedWishList = getGiftYourselfDetailsMobile(minGiftQuantity, allWishlists, pincode, cartModel);
 
 		if (null != sortedWishList && !sortedWishList.isEmpty())
 		{
@@ -2561,9 +2553,9 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 	/*
 	 * @param sortedWishListMap
-	 * 
+	 *
 	 * @return GetWishListWsDTO
-	 * 
+	 *
 	 * @throws EtailNonBusinessExceptions
 	 */
 	private GetWishListWsDTO getWishListWebserviceDetails(final Map<String, List<Wishlist2EntryModel>> sortedWishListMap,
@@ -2801,13 +2793,13 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 	/*
 	 * @Desc For webservice
-	 * 
+	 *
 	 * @param buyBoxModelList
-	 * 
+	 *
 	 * @param getWishListProductWsObj
-	 * 
+	 *
 	 * @return GetWishListProductWsDTO
-	 * 
+	 *
 	 * @throws EtailNonBusinessExceptions
 	 */
 
@@ -2836,11 +2828,11 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 	/*
 	 * @Desc For webservice
-	 * 
+	 *
 	 * @param wishlist2EntryModel
-	 * 
+	 *
 	 * @param getWishListProductWsObj
-	 * 
+	 *
 	 * @throws EtailNonBusinessExceptions
 	 */
 	private GetWishListProductWsDTO setWSWishlistEligibleDeliveryMode(final Wishlist2EntryModel wishlist2EntryModel,
@@ -2967,13 +2959,13 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 	/*
 	 * @DESC TISST-6994,TISST-6990 adding to cart COD eligible or not with Pincode serviceabilty and sship product
-	 * 
+	 *
 	 * @param deliveryModeMap
-	 * 
+	 *
 	 * @param pincodeResponseData
-	 * 
+	 *
 	 * @return boolean
-	 * 
+	 *
 	 * @throws EtailNonBusinessExceptions
 	 */
 	@Override
@@ -3265,11 +3257,11 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 	/*
 	 * @Desc fetching state details for a state name
-	 * 
+	 *
 	 * @param stateName
-	 * 
+	 *
 	 * @return StateModel
-	 * 
+	 *
 	 * @throws EtailNonBusinessExceptions
 	 */
 
@@ -3294,9 +3286,9 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 	/*
 	 * @Desc to generate Sub order id
-	 * 
+	 *
 	 * @return String
-	 * 
+	 *
 	 * @throws EtailNonBusinessExceptions
 	 */
 	@Override
@@ -3307,9 +3299,9 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 	/*
 	 * @Desc to generate Order Line id and transaction id
-	 * 
+	 *
 	 * @return String
-	 * 
+	 *
 	 * @throws EtailNonBusinessExceptions
 	 */
 	@Override
@@ -3321,9 +3313,9 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 	/*
 	 * @Desc to generate Order Id
-	 * 
+	 *
 	 * @return String
-	 * 
+	 *
 	 * @throws EtailNonBusinessExceptions
 	 */
 	@Override
@@ -3335,13 +3327,13 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 	/*
 	 * @Desc used for inventory soft reservation from Commerce Checkout and Payment
-	 * 
+	 *
 	 * @param requestType
-	 * 
+	 *
 	 * @param abstractOrderModel
-	 * 
+	 *
 	 * @return boolean
-	 * 
+	 *
 	 * @throws EtailNonBusinessExceptions
 	 */
 	@Override
@@ -3503,9 +3495,9 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 	/*
 	 * @description:Populate data to CartSoftReservationData
-	 * 
+	 *
 	 * @return:List<CartSoftReservationData>
-	 * 
+	 *
 	 * @throws EtailNonBusinessExceptions
 	 */
 
@@ -3722,21 +3714,21 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 	/**
 	 * This method is used to set fullFillMent type for a product
-	 * 
+	 *
 	 * @author TECHOUTS
 	 * @param cartSoftReservationData
 	 * @param abstractOrderModel
 	 * @return void
 	 */
-	private void setFullFillmentTypeForFreebie(CartSoftReservationData cartSoftReservationData,
-			AbstractOrderModel abstractOrderModel) throws EtailNonBusinessExceptions
+	private void setFullFillmentTypeForFreebie(final CartSoftReservationData cartSoftReservationData,
+			final AbstractOrderModel abstractOrderModel) throws EtailNonBusinessExceptions
 	{
 		try
 		{
-			String parentUSSID = cartSoftReservationData.getParentUSSID();
+			final String parentUSSID = cartSoftReservationData.getParentUSSID();
 			String parentFullfillmenttype = StringUtils.EMPTY;
-			String freebieFullfillmenttype = cartSoftReservationData.getFulfillmentType();
-			for (AbstractOrderEntryModel entry : abstractOrderModel.getEntries())
+			final String freebieFullfillmenttype = cartSoftReservationData.getFulfillmentType();
+			for (final AbstractOrderEntryModel entry : abstractOrderModel.getEntries())
 			{
 				if (entry.getSelectedUSSID().equalsIgnoreCase(parentUSSID))
 				{
@@ -3750,7 +3742,7 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 			}
 		}
-		catch (Exception e)
+		catch (final Exception e)
 		{
 			LOG.error("Exception while setting fullFillment type for freebie" + e.getCause());
 		}
@@ -3759,13 +3751,13 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 	/**
 	 * this Method is used to get the fullFillMent type for a product using USSID
-	 * 
+	 *
 	 * @author TECHOUTS
 	 * @param selectedUSSID
 	 * @return String
 	 *
 	 */
-	private String getFullfillmentTypeByUSSID(String selectedUSSID)
+	private String getFullfillmentTypeByUSSID(final String selectedUSSID)
 	{
 		String fulfillmentType = StringUtils.EMPTY;
 		final SellerInformationModel sellerInfoModel = getMplSellerInformationService().getSellerDetail(selectedUSSID);
@@ -3923,11 +3915,11 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 	/*
 	 * @DESC : Inventory list to be generated for TISPRD-2758
-	 *
+	 * 
 	 * @param abstractOrderModel
-	 *
+	 * 
 	 * @param entryModel
-	 *
+	 * 
 	 * @return Tuple2<?, ?>
 	 */
 	private Tuple2<?, ?> getFreebieInventoryList(final AbstractOrderModel abstractOrderModel,
@@ -3970,13 +3962,13 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 	/*
 	 * @DESC : Inventory list to be generated for TISPRD-2758
-	 *
+	 * 
 	 * @param abstractOrderModel
-	 *
+	 * 
 	 * @param entryModel
-	 *
+	 * 
 	 * @param productPromoCode
-	 *
+	 * 
 	 * @return List<CartSoftReservationData>
 	 */
 	private List<CartSoftReservationData> populateFreebieInventoryData(final AbstractOrderModel abstractOrderModel,
@@ -4713,15 +4705,15 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 	/*
 	 * @desc use to save freebie delivery mode
-	 * 
+	 *
 	 * @param cartModel
-	 * 
+	 *
 	 * @param freebieModelMap
-	 * 
+	 *
 	 * @param freebieParentQtyMap
-	 * 
+	 *
 	 * @return void
-	 * 
+	 *
 	 * @throws EtailNonBusinessExceptions
 	 */
 	@Override
